--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
+cat > package.json << 'EOF'
 {
   "name": "sgpepe",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
-    "start": "next start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d out"
+    "build": "next build",
+    "export": "next export",
+    "deploy": "gh-pages -d out",
+    "start": "next start"
   },
   "dependencies": {
     "next": "14.2.3",
@@ -20,7 +21,9 @@
   "devDependencies": {
     "tailwindcss": "^3.4.1",
     "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.24"
+    "postcss": "^8.4.24",
+    "gh-pages": "^6.0.0"
   },
   "homepage": "https://jhutdiydk.github.io/sgpepe"
 }
+EOF
